# pcml-run-26-kaneco32

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/mlfp01/: economic_indicators.csv  hdb_resale.parquet  sg_cpi.csv  sg_employment.csv  sg_fx_rates.csv  sg_taxi_trips.parquet  sg_weather.csv
data/mlfp02/: icu_admissions.parquet  icu_labs.parquet  icu_medications.parquet  icu_patients.parquet  icu_vitals.parquet
data/mlfp03/: documents.parquet  ecommerce_customers.parquet
data/mlfp04/: preference_pairs.parquet  sg_domain_qa.parquet
data/mlfp05/: ag_news.parquet  ag_news_test.parquet  sti_prices.parquet
data/mlfp05/sti/: sti_close.parquet
data/mlfp05/stocks/: 005930_KS.parquet  7203_T.parquet  9988_HK.parquet  AAPL.parquet
data/mlfp_assessment/: mrt_stations.parquet  schools.parquet
modules/mlfp01/local/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
modules/mlfp02/local/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
modules/mlfp03/local/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
modules/mlfp04/local/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
modules/mlfp05/local/: ex_7.py
modules/mlfp05/local/ex_1/: 01_standard_ae.py  02_undercomplete_ae.py  03_denoising_ae.py  04_sparse_ae.py  05_contractive_ae.py  06_convolutional_ae.py  07_stacked_ae.py  08_recurrent_ae.py  09_vae.py  10_contractive_vae.py  11_grand_comparison.py  __init__.py  helpers.py
modules/mlfp05/local/ex_2/: 01_simple_cnn.py  02_resnet_se.py  03_production_pipeline.py  04_hyperparameter_study.py  __init__.py  helpers.py
modules/mlfp05/local/ex_3/: 01_vanilla_rnn.py  02_lstm.py  03_gru.py  04_temporal_attention.py  05_architecture_comparison.py  __init__.py  helpers.py
modules/mlfp05/local/ex_4/: 01_self_attention_from_scratch.py  02_transformer_encoder.py  03_lstm_baseline.py  04_bert_finetuning.py  05_three_way_comparison.py  __init__.py  helpers.py
modules/mlfp05/local/ex_5/: 01_vanilla_gan.py  02_wgan_gp.py  03_gan_evaluation.py  __init__.py  helpers.py
modules/mlfp05/local/ex_6/: 01_gcn.py  02_gat.py  03_graphsage.py  04_link_prediction.py  05_architecture_comparison.py  __init__.py  helpers.py
modules/mlfp05/local/ex_7/: 01_from_scratch_baseline.py  02_transfer_resnet18.py  __init__.py  helpers.py
modules/mlfp05/local/ex_8/: 01_dqn.py  02_ppo.py  03_custom_environments.py  04_algorithm_comparison.py  __init__.py  helpers.py
modules/mlfp06/local/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
shared/: __init__.py  colab_setup.py  data_loader.py  kailash_helpers.py  run_profile.py
